Fixing menu width issue on iphones

--- a/docroot/sites/all/themes/ambitious/sass/layouts/header.scss
+++ b/docroot/sites/all/themes/ambitious/sass/layouts/header.scss
@@ -847,7 +847,7 @@ nav {
       }
     }
     @include breakpoint($mobile) {
-      max-width:92%;
+      max-width:94%;
       float:inherit;
       text-align:initial;
     }
